#VERSION 0.8.3#

 - fixed bug in Peak_Helpers::__get() by changing include for include_once

 - moved method _arrayMergeRecursive() from Peak_COnfig_Ini to Peak_Config, rename to arrayMergeRecursive() and changed
   visibility to public. fixed Peak_Core::initConfig() accordingly.

 - fixed Peak_View::iniVar() to not use '#' in ini file (# deprecated in 5.3) and to support loading a 
   ini file from a custom path. Variables used inside key value use syntax like $[myvar]. 

 - added method _registryConfig() in Peak_Controller_Front. Config use keyname 'front'. Modified method Peak_Application::run(),
   Peak_Controller_Front::dispatch() and Peak_Application_Modules::run() accordingly.

 - added property $allow_internal_controller to Peak_Controller_Front and deprecated 
   the use of constant ENABLE_PEAK_CONTROLLERS

 - added method _registryConfig() in Peak_View. We can now call methods for Peak_View inside an application 
   configuration file like set(), setRenderEngine(), rendering engine methods, etc... Config use keyname 'view'
   ex: view.set.myvar = "data", view.setRenderEngine = "Layouts", etc...

 - fixed Peak_Config_Ini::loadFile() to throw a exception if ini file contains syntax error(s) (php 5.2.7+)

 - rewrited appcreate.php to support new important changes
 
 - fixed listActions to flush $actions before listing actions methods and added support of $action_prefix to regex.

 - moved string to array conversion from matchRegex to addRegex in Peak_Router 

 - deleted deprecated folder views/functions


#VERSION 0.8.2#

 - fixed getRequestURI() when $base_uri = '/' (it mean that app located at the base of server url ex: http://example.com)

 - fixed double slash in url of method Peak_Router::setBaseUri() and Peak_Render::baseUrl()

 - method getObjectList() renamed to getObjectsList() in Peak_Registry

 - cleaning tests folder and simpletest and switching to PHPUnit
